June 19 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Loricatus, Scabies, Cruentus fix players BodyParts (each with their own specialities of course)
	* Angels also fix players bodyparts.
	* Tweaked the healing methods for the other healing gods for slight elegance in code.
	* Some small changes in proto.cpp to make it compile with gcc 3.1 (one typename added).

June 17 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* AP system remade: it is now the actions' duty to decrease AP, not Be()'s
	* Added read action, thus allowing reading times longer than one turn,
	  read interupts
	* Lookmode's messages and information keys work far better now
	* Fixed a minor bug in the lookmode zoom code
	* Removed the cursor from the zoom screen (exception: over the player it remains)
	* Petrus's PostFix is now shown correctly
	* Petrus's wife number 4 is now dumper than the others, since she's blond
	* Invisibility and see invisible states added, but they don't work yet

June 16 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Atavus, Seges and Silva now fix players BodyParts

June 16 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Priests in altars now attach old arms and legs to their old places. 

June 16 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added equipment pictures to panel
	* The config system of items and characters works now correctly (I think).
	  This means that one can add new equipment or monsters without touching code at all,
	  using one of the existing classes as a base
	* Converted almost all weapons to configurations of meleeweapon.
	  Weapons not converted: pickaxe (special, can dig), whip (special, FormModifier depends on material),
	  Valpurus's Justifier and Neerc Se-Ulb (artifacts, will get animation functions soon)
	* Converted chain mail, amulets, rings and boots to configurations of their base classes
	* Added possibility to specify config in script in brackets following a classname