@@ -1,3 +1,9 @@
+July 03 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* SDL's key repeat activated
+	* Pressing a control key during action no longer stops the game until key press.
+	* Helmet added
+
 June 19 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Loricatus, Scabies, Cruentus fix players BodyParts (each with their own specialities of course)
